--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<declare-styleable name="SlidingContainer_Layout">
-		<attr name="layout_viewPanel" format="boolean"/>
-		<attr name="layout_viewHeader" format="boolean"/>
+		<attr format="dimension" name="layout_viewType">
+			<enum name="header" value="-1"/>
+			<enum name="panel" value="-2"/>
+		</attr>
+
 		<attr name="layout_topOffset" format="dimension|reference"/>
 	</declare-styleable>
 
@@ -17,4 +20,40 @@
 		<attr name="gridThickness" format="dimension"/>
 		<attr name="gridColor" format="color"/>
 	</declare-styleable>
+
+
+	<declare-styleable name="AppBarLayout">
+		<attr name="elevation" />
+		<attr name="android:background" />
+	</declare-styleable>
+
+	<declare-styleable name="AppBarLayout_LayoutParams">
+		<attr name="layout_scrollFlags">
+			<!--&lt;!&ndash; The view will be scroll in direct relation to scroll events. This flag needs to be-->
+				 <!--set for any of the other flags to take effect. If any sibling views-->
+				 <!--before this one do not have this flag, then this value has no effect. &ndash;&gt;-->
+			<!--<flag name="scroll" value="0x1"/>-->
+			<!--&lt;!&ndash; When exiting (scrolling off screen) the view will be scrolled until it is-->
+				 <!--'collapsed'. The collapsed height is defined by the view's minimum height. &ndash;&gt;-->
+			<!--<flag name="exitUntilCollapsed" value="0x2"/>-->
+			<!--&lt;!&ndash; When entering (scrolling on screen) the view will scroll on any downwards-->
+				 <!--scroll event, regardless of whether the scrolling view is also scrolling. This-->
+				 <!--is commonly referred to as the 'quick return' pattern. &ndash;&gt;-->
+			<!--<flag name="enterAlways" value="0x4"/>-->
+			<!--&lt;!&ndash; An additional flag for 'enterAlways' which modifies the returning view to-->
+				 <!--only initially scroll back to it's collapsed height. Once the scrolling view has-->
+				 <!--reached the end of it's scroll range, the remainder of this view will be scrolled-->
+				 <!--into view. &ndash;&gt;-->
+			<!--<flag name="enterAlwaysCollapsed" value="0x8"/>-->
+		</attr>
+		<!-- An interpolator to use when scrolling this View. Only takes effect when View
+			 is scrollable. -->
+		<attr name="layout_scrollInterpolator" format="reference" />
+	</declare-styleable>
+
+	<declare-styleable name="ScrollingViewBehavior_Params">
+		<!-- The amount that the scrolling view should overlap the bottom of any AppBarLayout -->
+		<attr name="behavior_overlapTop" format="dimension" />
+	</declare-styleable>
+
 </resources>
