--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,41 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-		xmlns:android="http://schemas.android.com/apk/res/android"
-		xmlns:tools="http://schemas.android.com/tools"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:orientation="vertical"
-		android:padding="16dp"
-		tools:context=".MainActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp"
+    tools:context=".MainActivity">
 
-	<Button
-			android:id="@+id/btn1"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:text="Sliding Container"/>
+    <Button
+        android:id="@+id/btn1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Sliding Container" />
 
-	<Button
-			android:id="@+id/btn2"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:text="Graph View"/>
+    <Button
+        android:id="@+id/btn2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Graph View" />
 
-	<Button
-			android:id="@+id/btn3"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:text="Fit window FL"/>
+    <Button
+        android:id="@+id/btn3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Fit window FL" />
 
-	<Button
-			android:id="@+id/btn4"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:text="Swipe Layout"/>
+    <Button
+        android:id="@+id/btn4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Swipe Layout" />
 
-	<Button
-			android:id="@+id/btn5"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:text="App Bar Layout"/>
+    <Button
+        android:id="@+id/btn5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="App Bar Layout" />
+
+    <Button
+        android:id="@+id/btn6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Sliding Behaviour" />
 
 </LinearLayout>
