--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -56,4 +56,10 @@
 		<attr name="behavior_overlapTop" format="dimension" />
 	</declare-styleable>
 
+
+	<declare-styleable name="SlidingViewBehavior_Params">
+		<!-- The amount that the scrolling view should overlap the bottom of any AppBarLayout -->
+		<attr name="behavior_overlapView" format="integer" />
+	</declare-styleable>
+
 </resources>
