--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,7 +15,7 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
-    <style name="Widget.Design.AppBarLayout" parent="android:Widget">
+    <style name="AppBarLayout" parent="android:Widget">
         <item name="elevation">4dp</item>
         <item name="android:background">?attr/colorPrimary</item>
     </style>
