--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,4 +43,10 @@
         android:layout_height="wrap_content"
         android:text="Sliding Behaviour" />
 
+    <Button
+        android:id="@+id/btn7"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Motion Appbar" />
+
 </LinearLayout>
