--- a/app/src/main/res/xml/appbar_motion_scene.xml
+++ b/app/src/main/res/xml/appbar_motion_scene.xml
@@ -23,7 +23,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="@id/topInset">
 
             <Transform
                 android:scaleX="1.5"
@@ -41,7 +41,7 @@
             android:layout_width="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="@id/topInset">
 
             <Transform
                 android:scaleX="1.0"
