--- a/app/src/main/res/xml/appbar_motion_scene.xml
+++ b/app/src/main/res/xml/appbar_motion_scene.xml
@@ -40,7 +40,7 @@
             android:layout_marginStart="16dp"
             android:layout_width="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/btnBack"
             app:layout_constraintTop_toTopOf="@id/topInset">
 
             <Transform
