--- a/app/src/main/res/layout/activity_motion.xml
+++ b/app/src/main/res/layout/activity_motion.xml
@@ -18,37 +18,94 @@
         android:layout_width="0dp"
         app:layoutDescription="@xml/appbar_motion_scene">
 
-        <ImageView
-            style="@style/Widget.AppCompat.Toolbar.Button.Navigation"
-            android:id="@+id/btnBack"
-            android:layout_height="56dp"
-            android:layout_width="56dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:src="?android:attr/homeAsUpIndicator"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/topInset" />
-
-        <TextView
-            android:id="@+id/appBarTitle"
+        <androidx.appcompat.widget.AppCompatButton
+            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
+            android:id="@+id/appBarButton"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:text="Hello world!"
-            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
-
-        <ImageView
-            style="@style/Widget.AppCompat.Toolbar.Button.Navigation"
-            android:id="@+id/btnMenu"
-            android:layout_height="56dp"
-            android:layout_width="56dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:tint="?attr/colorControlNormal"
-            android:src="@drawable/ic_android_black_24dp"
+            android:text="Button"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/topInset" />
+            android:layout_marginTop="24dp"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/appBarTitle"
+            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:text="Headline text"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+            android:textSize="20sp"
+            android:transformPivotX="0dp"
+            android:transformPivotY="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/appBarSubtitle"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginTop="24dp"
+            android:layout_width="0dp"
+            android:textSize="16sp"
+            android:text="Subtitle text ololo ololol ololololololo\nSubtitle text ololo"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/appBarTitle"
+            app:layout_constraintTop_toBottomOf="@+id/appBarTitle" />
 
     </com.vvechirko.slidepaneltest.motion.MotionAppBar>
+
+    <!--<com.vvechirko.slidepaneltest.motion.MotionAppBar-->
+    <!--android:background="@color/colorPrimary"-->
+    <!--android:elevation="4dp"-->
+    <!--android:fitsSystemWindows="true"-->
+    <!--android:id="@id/appBar"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_width="0dp"-->
+    <!--app:layoutDescription="@xml/appbar_motion_scene">-->
+
+    <!--<ImageView-->
+    <!--android:id="@+id/bg"-->
+    <!--android:layout_height="0dp"-->
+    <!--android:layout_width="0dp"-->
+    <!--android:scaleType="centerCrop"-->
+    <!--android:src="@drawable/ic_launcher_background"-->
+    <!--app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--app:layout_constraintEnd_toEndOf="parent"-->
+    <!--app:layout_constraintStart_toStartOf="parent"-->
+    <!--app:layout_constraintTop_toTopOf="parent" />-->
+
+    <!--<ImageView-->
+    <!--style="@style/Widget.AppCompat.Toolbar.Button.Navigation"-->
+    <!--android:clickable="true"-->
+    <!--android:focusable="true"-->
+    <!--android:id="@+id/btnBack"-->
+    <!--android:layout_height="56dp"-->
+    <!--android:layout_width="56dp"-->
+    <!--android:src="?android:attr/homeAsUpIndicator"-->
+    <!--app:layout_constraintStart_toStartOf="parent"-->
+    <!--app:layout_constraintTop_toTopOf="@id/topInset" />-->
+
+    <!--<TextView-->
+    <!--android:id="@+id/appBarTitle"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:text="Hello world!"-->
+    <!--android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />-->
+
+    <!--<ImageView-->
+    <!--style="@style/Widget.AppCompat.Toolbar.Button.Navigation"-->
+    <!--android:clickable="true"-->
+    <!--android:focusable="true"-->
+    <!--android:id="@+id/btnMenu"-->
+    <!--android:layout_height="56dp"-->
+    <!--android:layout_width="56dp"-->
+    <!--android:src="@drawable/ic_android_black_24dp"-->
+    <!--android:tint="?attr/colorControlNormal"-->
+    <!--app:layout_constraintEnd_toEndOf="parent"-->
+    <!--app:layout_constraintTop_toTopOf="@id/topInset" />-->
+
+    <!--</com.vvechirko.slidepaneltest.motion.MotionAppBar>-->
 
     <androidx.recyclerview.widget.RecyclerView
         android:background="#FFF"
