--- a/app/src/main/res/xml/appbar_motion_scene.xml
+++ b/app/src/main/res/xml/appbar_motion_scene.xml
@@ -15,38 +15,84 @@
 
     <ConstraintSet android:id="@+id/start">
 
+        <Constraint android:id="@+id/appBarButton">
+            <Transform android:translationY="0dp" />
+            <PropertySet android:alpha="1.0" />
+        </Constraint>
+
         <Constraint
             android:id="@+id/appBarTitle"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="0dp"
-            android:layout_width="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="56dp"
+            android:layout_marginEnd="16dp"
+            android:scaleX="1.7"
+            android:scaleY="1.7"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/topInset">
+            app:layout_constraintTop_toTopOf="@id/topInset" />
 
-            <Transform
-                android:scaleX="1.5"
-                android:scaleY="1.5" />
+        <Constraint android:id="@+id/appBarSubtitle">
+            <Transform android:translationY="0dp" />
+            <PropertySet android:alpha="1.0" />
         </Constraint>
+
+        <!--<Constraint-->
+            <!--android:id="@+id/appBarTitle"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginStart="0dp"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--app:layout_constraintEnd_toEndOf="parent"-->
+            <!--app:layout_constraintStart_toStartOf="parent"-->
+            <!--app:layout_constraintTop_toTopOf="@id/topInset">-->
+
+            <!--<Transform-->
+                <!--android:scaleX="1.5"-->
+                <!--android:scaleY="1.5" />-->
+        <!--</Constraint>-->
 
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
 
+        <Constraint android:id="@+id/appBarButton">
+            <Transform android:translationY="-56dp" />
+            <PropertySet android:alpha="0.0" />
+        </Constraint>
+
         <Constraint
             android:id="@+id/appBarTitle"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_width="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:scaleX="1.0"
+            android:scaleY="1.0"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/btnBack"
-            app:layout_constraintTop_toTopOf="@id/topInset">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/topInset"
+            app:layout_constraintStart_toStartOf="parent" />
 
-            <Transform
-                android:scaleX="1.0"
-                android:scaleY="1.0" />
+        <Constraint android:id="@+id/appBarSubtitle">
+            <Transform android:translationY="-16dp" />
+            <PropertySet android:alpha="0.0" />
         </Constraint>
+
+        <!--<Constraint-->
+            <!--android:id="@+id/appBarTitle"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginStart="16dp"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--app:layout_constraintStart_toEndOf="@+id/btnBack"-->
+            <!--app:layout_constraintTop_toTopOf="@id/topInset">-->
+
+            <!--<Transform-->
+                <!--android:scaleX="1.0"-->
+                <!--android:scaleY="1.0" />-->
+        <!--</Constraint>-->
 
     </ConstraintSet>
 
