--- a/app/src/main/res/layout/activity_slide_behaviour.xml
+++ b/app/src/main/res/layout/activity_slide_behaviour.xml
@@ -1,38 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:fitsSystemWindows="true"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
 
-    <com.vvechirko.slidepaneltest.FitWindowFrameLayout
-        android:id="@+id/head"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
+    <FrameLayout
         android:background="@android:color/holo_blue_dark"
-        android:fitsSystemWindows="false">
+        android:fitsSystemWindows="true"
+        android:id="@+id/head"
+        android:layout_height="300dp"
+        android:layout_width="match_parent">
 
         <View
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
             android:background="@android:color/holo_orange_dark"
-            android:fitsSystemWindows="false" />
+            android:fitsSystemWindows="false"
+            android:layout_height="100dp"
+            android:layout_width="match_parent" />
 
-    </com.vvechirko.slidepaneltest.FitWindowFrameLayout>
+    </FrameLayout>
 
     <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
         android:background="@drawable/content_rounded_bg"
         android:elevation="4dp"
+        android:fitsSystemWindows="false"
+        android:layout_height="match_parent"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_width="match_parent"
+        app:behavior_overlapTop="72dp"
         app:behavior_overlapView="@+id/head"
         app:layout_behavior="com.vvechirko.slidepaneltest.slide.SlidingViewBehaviour">
 
         <TextView
-            android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_width="match_parent"
             android:padding="24dp"
             android:text="@string/lorem"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
